[package]
name = "ipfs-webdav"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Vladislav Beskrovny <beskvlad@gmail.com>"]
repository = "https://github.com/vlad20012/ipfs-webdav"
homepage = "https://github.com/vlad20012/ipfs-webdav"
keywords = ["ipfs", "webdav", "fs", "filesystem", "http", "middleware"]
edition = "2021"

[dependencies]
ipfs-api-backend-hyper = { version = "0.4.0", features = ["with-send-sync"] }
ipfs-api-prelude = "0.4.0"
webdav-handler = "0.2.0"
hyper = { version = "0.14.7", features = [ "http1", "server", "stream", "runtime" ] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.21"
env_logger = "0.9.0"
log = "0.4.16"
unixfs-v1 = "0.2.1"
quick-protobuf = "0.8.0"
serde = "1.0.136"
bytes = "1.1.0"
common-multipart-rfc7578 = "0.5.0"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 1
